--- a/twitter/templates/twitter/index.html
+++ b/twitter/templates/twitter/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Twitter</title>
-</head>
-<body>
-        Hello World
-</body>
-</html>
+
+
+{% for item in status %}
+<p>{{item}}</p>
+
+{% endfor %}
