8th Commit: Completely attached Theme (SB admin) as well as successfully got the name from search bar

--- a/twitter/templates/twitter/New.html
+++ b/twitter/templates/twitter/New.html
@@ -1,17 +1,14 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
-  <meta charset="utf-8">
+    <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Social Reach - Dashboard</title>
+  <title>{{Sname}}  Social Reach - Dashboard</title>
 
   <!-- Custom fonts for this template-->
   <link href="{% static 'vendor/fontawesome-free/css/all.min.css'%}" rel="stylesheet" type="text/css">
@@ -21,11 +18,8 @@
   <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
 
 </head>
-
 <body id="page-top">
-
-  <!-- Page Wrapper -->
-  <div id="wrapper">
+ <div id="wrapper">
 
     <!-- Sidebar -->
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
@@ -770,7 +764,6 @@ Highcharts.chart('pie', {
 });
   </script>
 
+
 </body>
-
 </html>
-
